syntax = "proto3";

package proto;

option go_package = ".proto";

service grpcSendMsg {
  rpc sendMsg (messageRequest) returns (messageReply) {}
}

message messageRequest {
  string message = 1;
}

message messageReply {
  string message = 1;
}