syntax = "proto3";

package streamProtoc;

option go_package = "github.com/jaden7856/go-tcp_grpc-server-client/gRPC/streamProtoc";

service SeSaFile {
  rpc Upload (stream dataFiles) returns (stream UploadStatus) {}
}

message dataFiles {
  bytes Content = 1;
  string totalSize = 2;
  string received = 3;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message UploadStatus {
  string Message = 1;
  UploadStatusCode Code = 2;
}